<resources>
    <string name="app_name">Notas do Spinelli</string>
    <string name="creator">Vinícius Spinelli</string>
    <string name="label_no_note">Nenhuma nota.\nAdicione a primeira:</string>
    <string name="button_first_add">Adicionar primeira nota</string>

    <!-- Dialogs !-->
    <string name="message_dialog_delete">Deseja realmente apagar esta nota?</string>
    <string name="title_dialog_sort">Ordenar por</string>
    <string name="yes_dialog">Sim</string>
    <string name="confirm_dialog">Confirmar</string>
    <string name="no_dialog">Não</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="notify_dialog">Notificação</string>
    <string name="notify_default_0">Não nofiticar</string>
    <string name="notify_default_1">Notificar no horário</string>
    <string name="notify_default_2">Personalizar</string>
    <string name="notify_minute_before">minutos antes</string>
    <string name="notify_hour_before">horas antes</string>
    <string name="notify_minute">minutos</string>
    <string name="notify_hour">horas</string>
    <string name="time_before">Digite o tempo</string>
    <string name="sort_id">Alfabética</string>
    <string name="sort_id_desc">Alfabética-invertida</string>
    <string name="sort_alpha">Ordem de criação</string>
    <string name="sort_alpha_desc">Recentes</string>


    <!--Notificação!-->
    <string name="default_value_title">Notificação de nota</string>
    <string name="notify_remaining_new">Notificação será feita em</string>
    <string name="notify_remaining_extended">Notificação atualizada para</string>

    <!--Nova nota e nota extendida !-->
    <string name="new_note">Nova Nota</string>
    <string name="note">Nota</string>
    <string name="title">Título</string>
    <string name="resume">Resumo</string>
    <string name="description">Descrição</string>
    <string name="selectColor">Seleciona a cor da nota:</string>
    <string name="yellow">Amarelo</string>
    <string name="gray">Cinza</string>
    <string name="green">Verde</string>
    <string name="pink">Rosa</string>
    <string name="date">Data</string>
    <string name="time">Horário</string>
    <string name="notify">Notificar</string>
    <string name="create_data">Criado em:</string>

    <string name="parse_yellow">YELLOW</string>
    <string name="parse_gray">LIGHTGRAY</string>
    <string name="parse_green">GREEN</string>
    <string name="parse_pink">MAGENTA</string>

    <!-- Toast !-->
    <string name="error_insert">Erro ao cadastrar nota!</string>
    <string name="error_update">Erro ao atualizar nota!</string>
    <string name="error_delete">Erro ao deletar nota!</string>
    <string name="error_sort">Erro ao ordenar nesta categoria.</string>
    <string name="required_title">Título é obrigatório!</string>
    <string name="required_date_time">Informe a data e hora!</string>
    <string name="error_select_color">Problema com a cor!</string>
    <string name="notify_cancel">Notificação cancelada!</string>
    <string name="notify_invalid">Data e/ou Horário inválido(s)!</string>
    <string name="time_value_invalid">Informe um valor de tempo!</string>
</resources>