<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_new_note"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/new_note"
            app:titleTextColor="@color/white"
            android:elevation="4dp"
            android:theme="@style/AppTheme"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/toolbar_new_note"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp">

                <EditText
                    android:id="@+id/title_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditedEditText"
                    android:layout_marginTop="10dp"
                    android:textSize="40sp"
                    android:maxLength="15"
                    android:hint="@string/title"
                    android:autofillHints="false" />

                <EditText
                    android:id="@+id/resume_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditedEditText"
                    android:hint="@string/resume"
                    android:maxLength="30"
                    android:layout_below="@id/title_new_note"
                    android:autofillHints="false" />
                <EditText
                    android:id="@+id/description_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/EditedEditText"
                    android:hint="@string/description"
                    android:layout_below="@id/resume_new_note"
                    android:inputType="textMultiLine"
                    android:autofillHints="false" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_date_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_date"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/card_view_new_note"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/button_time_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_time"
            android:text="@string/time"
            android:textAllCaps="false"
            android:textAlignment="textEnd"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_new_note"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/button_notify_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_action_notify"
            android:text="@string/notify"
            android:textAllCaps="false"
            android:textAlignment="textEnd"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_date_new_note"
            style="?android:attr/borderlessButtonStyle"
            />

        <TextView
            android:id="@+id/title_radio_new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_notify_new_note"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:text="@string/selectColor"
            style="@style/EditedEditText"/>

        <RadioGroup
            android:id="@+id/radio_group_new_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_radio_new_note"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="50dp"
            android:paddingBottom="50dp"
            android:orientation="horizontal"
            style="@style/EditedEditText">

            <RadioButton
                android:id="@+id/yellow_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/yellow"/>

            <RadioButton
                android:id="@+id/gray_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gray"/>

            <RadioButton
                android:id="@+id/green_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>

            <RadioButton
                android:id="@+id/pink_new_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>